--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@stytch/vanilla-js": "^5.41.0",
+    "dotenv": "^17.2.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
