feat: UI update for when passwords do not match

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ritchie Fu",
   "license": "ISC",
   "dependencies": {
+    "@stytch/vanilla-js": "^5.41.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
