--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "firebase": "^12.6.0",
     "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.2",
     "nodemon": "^3.1.11",
